--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -8,7 +8,7 @@
   "utm.configuration.heavyMetalAnvilLV.autoUpdate": "Should utm automatically update.",
 
   "block.utm.heavy_metal_anvil": "Heavy-Metal Anvil",
-
+  "block.utm.grate": "Grating",
   "item.utm.copper_sword": "Copper Sword",
   "item.utm.copper_pickaxe": "Copper Pickaxe",
   "item.utm.copper_axe": "Copper Axe",
