im having a grate time

--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.utm.copper_axe": "Copper Axe",
   "item.utm.copper_shovel": "Copper Shovel",
   "item.utm.copper_hoe": "Copper Hoe",
+  "item.utm.fiddlehead": "Fiddlehead",
 
   "itemGroup.utm": "utm Items",
 
