--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -9,6 +9,8 @@
 
   "block.utm.heavy_metal_anvil": "Heavy-Metal Anvil",
   "block.utm.grate": "Grating",
+  "block.utm.glint_table": "Glint Augmenter",
+
   "item.utm.copper_sword": "Copper Sword",
   "item.utm.copper_pickaxe": "Copper Pickaxe",
   "item.utm.copper_axe": "Copper Axe",
