--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -10,7 +10,8 @@
   "block.utm.heavy_metal_anvil": "Heavy-Metal Anvil",
   "block.utm.grate": "Grating",
   "block.utm.glint_table": "Glint Augmenter",
-  "block.utm.citywalls_metal": "city walls metal",
+  "block.utm.citywalls_metal": "Metal City",
+  "block.utm.outpostwalls_metal": "Metal Town",
 
   "item.utm.copper_sword": "Copper Sword",
   "item.utm.copper_pickaxe": "Copper Pickaxe",
