--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -29,6 +29,8 @@
   "item.utm.unfinished_glint_table": "Unfinished Glint Augmenter",
   "item.utm.obsidian_sword": "Obsidian Sword",
 
+  "effect.utm.interdicted": "Interdicted!",
+
   "itemGroup.utm": "utm Items",
 
   "emi.category.utm.anvil_transformation": "Anvil Reinforcement",
