--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -37,6 +37,9 @@
   "item.utm.elytra_trim_heartstwings": "'heartstwings' Elytra Trim Template",
   "item.utm.elytra_trim_roadrunner": "Roadrunner Elytra Trim Template",
   "item.utm.elytra_trim_spades": "Spades Elytra Trim Template",
+  "item.utm.fiddlecore": "Fiddlehead Core",
+  "item.utm.floatingcore": "Floating Core",
+
 
   "effect.utm.interdicted": "Interdicted!",
 
