--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -23,6 +23,7 @@
   "block.utm.chunk_loader": "Chunk Loader",
   "block.utm.player_chunk_loader": "Player-bound Chunk Loader",
   "block.utm.interdictor": "Interdictor",
+  "block.utm.outpostwalls_shrine": "Shrine Town",
 
   "item.utm.copper_sword": "Copper Sword",
   "item.utm.copper_pickaxe": "Copper Pickaxe",
