incredibase. .  not compelte so you do it pls

--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -43,7 +43,7 @@
   "item.utm.elytra_trim_spades": "Spades Elytra Trim Template",
   "item.utm.fiddlecore": "Fiddlehead Core",
   "item.utm.floatingcore": "Floating Core",
-
+  "item.utm.incredi": "Colony Incredi-Pak",   "description.utm.incredi": "Places a colony wherever used",
 
   "effect.utm.interdicted": "Interdicted!",
 
