--- a/src/main/resources/assets/utm/lang/en_us.json
+++ b/src/main/resources/assets/utm/lang/en_us.json
@@ -24,6 +24,7 @@
   "block.utm.player_chunk_loader": "Player-bound Chunk Loader",
   "block.utm.interdictor": "Interdictor",
   "block.utm.outpostwalls_shrine": "Shrine Town",
+  "block.utm.citywalls_shrine": "Shrine City",
 
   "item.utm.copper_sword": "Copper Sword",
   "item.utm.copper_pickaxe": "Copper Pickaxe",
